appId: "com.preflight.example"
tags:
  - preflight
  - "counter"
---
- launchApp:
    stopApp: false

- openLink:
    link: "preflight://scenario/counter"

- assertVisible:
    id: "counter"

- assertVisible:
    id: "count"
    text: "0"

- tapOn:
    id: "increment"

- assertVisible:
    id: "count"
    text: "1"

- tapOn:
    id: "increment"

- assertVisible:
    id: "count"
    text: "2"

- tapOn:
    id: "decrement"

- assertVisible:
    id: "count"
    text: "1"

- waitForAnimationToEnd

- takeScreenshot: ".maestro/snapshots/counter/current"
